fixed layout issues

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,13 +36,14 @@ body {
 .navbar ul {
   list-style: none;
   display: flex;
+  font-size: 3vw;
 }
 
 
 .navbar a {
   color: #fff;
   text-decoration: none;
-  font-size: 1.2rem;
+  font-size: vw;
 }
 
 .navbar a:hover {
@@ -77,7 +78,7 @@ body {
 
 .showcase form input,
 form select {
-  font-size: 2vw;
+  font-size: 3vw;
   width: 60vw;
   padding: 1rem;
   border: 1px solid #ccc;
